[project]
name = "allor"
description = "A high-performance image processing node pack for ComfyUI with 90+ nodes for filters, transforms, compositing, drawing, segmentation, and more."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["rembg", "onnx", "Pillow", "opencv-python"]

[project.urls]
Repository = "https://github.com/pxl-pshr/ComfyUI-Allor"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/pxl-pshr/ComfyUI-Allor/wiki"
"Bug Tracker" = "https://github.com/pxl-pshr/ComfyUI-Allor/issues"

[tool.comfy]
PublisherId = "pxlpshr"
DisplayName = "ComfyUI-Allor"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

